Begin work on show 12

--- a/src/styles/components/_star-draw.scss
+++ b/src/styles/components/_star-draw.scss
@@ -17,3 +17,8 @@
   background-size: cover;
   background-image: url('../img/star-draw/nightsky.jpg');
 }
+
+.connecting-alert.-fake {
+  z-index: auto;
+  @include rainbow-text;
+}
