--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -142,3 +142,14 @@
     fill: transparent;
   }
 }
+
+.chaos-cta {
+  top: 0 !important;
+  right: 0 !important;
+  left: auto !important;
+  transform: scale(-0.8,0.8) !important;
+  transform-origin: 70% 0%;
+  a { pointer-events: none; }
+  z-index: 10;
+  position: fixed!important;
+}
