--- a/src/styles/components/_hellbus.scss
+++ b/src/styles/components/_hellbus.scss
@@ -1,19 +1,19 @@
 
 @keyframes shake {
   10%, 90% {
-    transform: translate(-50%,0%) translate3d(-1px, 0, 0);
+    transform: translate(-50%,-50%) translate3d(-1px, 0, 0) rotate(-90deg);
   }
   
   20%, 80% {
-    transform: translate(-50%,0%) translate3d(2px, 0, 0) scale(1.1);
+    transform: translate(-50%,-50%) translate3d(2px, 0, 0) scale(1.1) rotate(-90deg);
   }
 
   30%, 50%, 70% {
-    transform: translate(-50%,0%) translate3d(-4px, 0, 0);
+    transform: translate(-50%,-50%) translate3d(-4px, 0, 0) rotate(-90deg);
   }
 
   40%, 60% {
-    transform: translate(-50%,0%) translate3d(20px, 0, 0);
+    transform: translate(-50%,-50%) translate3d(20px, 0, 0) rotate(-90deg);
   }
 }
 
@@ -22,10 +22,10 @@
   height: 30vh;
   width: 50vh;
   position: fixed;
-  bottom: 0;
-  left: 50%;
+  top: 20%;
+  left: 20%;
   // background-color: red;
-  transform: translate(-50%,0%);
+  transform: translate(-50%,-50%) rotate(-90deg);
   animation: shake 1s infinite;
   pointer-events: none;
   button { 
