--- a/src/styles/components/_pomplo.scss
+++ b/src/styles/components/_pomplo.scss
@@ -1,32 +1,10 @@
-
-@keyframes shake {
-  10%, 90% {
-    transform: translate(-50%,0%) translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate(-50%,0%) translate3d(2px, 0, 0) scale(1.1);
-  }
-
-  30%, 50%, 70% {
-    transform: translate(-50%,0%) translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate(-50%,0%) translate3d(20px, 0, 0);
-  }
-}
-
 #pomplo {
-  @include mask(orange);
+  @include mask(lime);
   height: 30vh;
   width: 30vh;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  // background-color: red;
-  transform: translate(-50%,-50%);
-  // animation: shake 6s infinite;
+  bottom: 10vh;
+  left: 0;
   pointer-events: none;
 
   button { 
