--- a/src/styles/components/_fireflies.scss
+++ b/src/styles/components/_fireflies.scss
@@ -13,14 +13,15 @@
     transform: scale(3);
   }
 }
+
 .firefly {
-  position: fixed;
-  pointer-events: none;
   top: -20px;
   left: -20px;
   width: 20px;
   height: 20px;
-  transition: transform 0.5s ease-out, opacity 0.2s;
+  position: fixed;
+  pointer-events: none;
+  transition: transform 0.2s linear, opacity 0.2s;
 
   .click {
     display: none;
