--- a/src/styles/components/_holy-space-baby.scss
+++ b/src/styles/components/_holy-space-baby.scss
@@ -79,6 +79,11 @@
   &.flight {
     --spin-time: 4s;
   }
+  &.micro {
+    --spin-time: 4s;
+    width: calc(var(--baby-size) /3);
+    height: calc(var(--baby-size) /3);
+  }
 
 
   &.chaos {
