--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,6 +25,7 @@
 @import 'components/fireflies';
 @import 'components/tug-of-war';
 @import 'components/hellbus';
+@import 'components/atomic-dog';
 @import 'components/pomplo';
 @import 'components/coloring-book';
 @import 'components/star-draw';
