--- a/src/styles/components/_fireflies.scss
+++ b/src/styles/components/_fireflies.scss
@@ -60,7 +60,7 @@
   }
 }
 
-#scene-darkwall0, #scene-darkwall1 {
+#scene-darkwall0, #scene-darkwall1, #scene-monster0, #scene-monster1 {
   .firefly .light {
     display: none;
   }
