--- a/src/styles/components/_atomic-dog.scss
+++ b/src/styles/components/_atomic-dog.scss
@@ -1,27 +1,27 @@
 
 @keyframes shake {
   10%, 90% {
-    transform: translate(-50%,-50%) translate3d(-1px, 0, 0);
+    transform: translate(-70%,-50%) translate3d(-1px, 0, 0);
     opacity: 1;
   }
   
   
   20% {
-    transform: translate(-50%,-50%) translate3d(2px, 0, 0) scale(1.1);
+    transform: translate(-70%,-50%) translate3d(2px, 0, 0) scale(1.1);
     opacity: 1;
   }
   80% {
-    transform: translate(-50%,-50%) translate3d(2px, 0, 0) scale(1.1);
+    transform: translate(-70%,-50%) translate3d(2px, 0, 0) scale(1.1);
     opacity: 0.7;
   } 
 
   30%, 50%, 70% {
-    transform: translate(-50%,-50%) translate3d(-4px, 0, 0);
+    transform: translate(-70%,-50%) translate3d(-4px, 0, 0);
     opacity: 1;
   }
 
   40%, 60% {
-    transform: translate(-50%,-50%) translate3d(20px, 0, 0);
+    transform: translate(-70%,-50%) translate3d(20px, 0, 0);
     opacity: 1;
   }
 }
@@ -34,7 +34,7 @@
   top: 25%;
   left: 35%;
   // background-color: red;
-  transform: translate(-50%,-50%);
+  transform: translate(-70%,-50%);
   animation: shake 1s infinite;
   pointer-events: none;
   button { 
@@ -56,6 +56,79 @@
   &.-big {
     bottom: auto;
     top: 0;
+    height: 60vh;
+    width: 100vh;
+  }
+}
+
+#monster, #atomic-dog {
+  @include mask(lime);
+  height: 50vh;
+  width: 50vh;
+  position: fixed;
+  top: 25%;
+  left: 35%;
+  // background-color: red;
+  transform: translate(-70%,-50%);
+  animation: shake 1s infinite;
+  pointer-events: none;
+  button { 
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-image: url('../../src/img/atomic-dog/atomic-dog.svg');
+    background-size: contain;
+    border: none;
+    outline: none;
+    background-position: bottom;
+    background-repeat: no-repeat;
+  }
+
+  &.-big {
+    bottom: auto;
+    top: 0;
+    height: 60vh;
+    width: 100vh;
+  }
+}
+
+
+@keyframes squish {
+  0%, 100% {
+    transform: translate(-70%,-50%) scaleY(1.1);
+  }
+  50% {
+
+    transform: translate(-70%,-50%) scaleY(0.8);
+  }
+}
+
+@keyframes squish2 {
+  0%, 100% {
+    transform: translate(-50%,-50%) scaleY(1.1);
+  }
+  50% {
+
+    transform: translate(-50%,-50%) scaleY(0.8);
+  }
+}
+
+#monster {
+
+  animation: squish 1s infinite;
+  @include mask(violet);
+  button {
+    background-image: url('../../src/img/monster/monster.svg'); 
+  }
+  &.-center {
+
+    animation: squish2 1s infinite;
+    left: 50%;
+    top: 50%;
     height: 60vh;
     width: 100vh;
   }
