Add ticketing system

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,3 +29,4 @@
 @import 'components/pomplo';
 @import 'components/coloring-book';
 @import 'components/star-draw';
+@import 'components/homepage';
