--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -50,7 +50,9 @@
           @include semantic-only-list;
         }
         .ticket-listings__showtime {
-          background: rgba(white,0.1);
+          // padding: 1em;
+          // background: rgba(violet,0.1);
+          // border-radius: 10px;
         }
       }
     }
