--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,13 +1,13 @@
 .homepage {
 
   h1 {
-    font-size: 3em;
+    font-size: 2.5em;
   }
   h2 {
     font-size: 2.5em;
   }
   h3 {
-    font-size: 2.5em;
+    font-size: 2em;
   }
   .homepage__content-block {
     @include font-display;
@@ -31,28 +31,39 @@
         margin: 1em auto;
       }
 
-
-
-      .availability {
-        display: block;
-        color: lime;
-        font-size: 2em;
-        margin-bottom: -0.3em;
-      }
-
-      .button {
-        color: lime;
-        border-color: lime;
-      }
-
       #ticket-listings {
+
         ul {
           @include semantic-only-list;
         }
+
         .ticket-listings__showtime {
-          // padding: 1em;
-          // background: rgba(violet,0.1);
-          // border-radius: 10px;
+          padding: 1em;
+          border-top: 2px solid white;
+
+          &:first-of-type {
+            border-top: none;
+          }
+
+          &__availability {
+            span {
+              display: block;
+              color: lime;
+              font-size: 2em;
+              margin-bottom: -0.3em;
+            }
+          }
+  
+          .button {
+            color: lime;
+            border-color: lime;
+  
+            &.button--disabled {
+              opacity: 0.3;
+              pointer-events: none;
+            }
+          }
+  
         }
       }
     }
