--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -2,9 +2,11 @@
 
   h1 {
     font-size: 2.5em;
+    margin-bottom: 0;
   }
   h2 {
     font-size: 2.5em;
+    margin-bottom: 0;
   }
   h3 {
     font-size: 2em;
@@ -17,7 +19,7 @@
     width: 80vw;
 
     max-width: 20em;
-    margin: 2em auto;
+    margin: 1em auto;
     // max-width: 700px;
     text-align: center;
     @include glow(white);
@@ -28,7 +30,7 @@
       }
 
       p {
-        margin: 1em auto;
+        margin: 0 auto 1em;
       }
 
       #ticket-listings {
