Update homepage to postpone shows

--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -3,10 +3,12 @@
   h1 {
     font-size: 2.5em;
     margin-bottom: 0;
+    color: lime;
   }
   h2 {
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 0;
+    color: lime;
   }
   h3 {
     font-size: 2em;
